unpackaged/main/default/objects/API_Connector__IndueD_Input_Settings__c/API_Connector__IndueD_Input_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>IndueD Input Settings</label>
</CustomObject>