unpackaged/main/default/objects/API_Connector__IndueD_Input_Settings__c/fields/API_Connector__adverse_medias__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__adverse_medias__c</fullName>
    <label>adverse_medias</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>