unpackaged/main/default/objects/API_Connector__IndueD_Input_Settings__c/fields/API_Connector__managers_scope__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__managers_scope__c</fullName>
    <label>managers_scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>