unpackaged/main/default/objects/API_Connector__IndueD_Input_Settings__c/fields/API_Connector__peps__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__peps__c</fullName>
    <label>peps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>